--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 <body>
     <h1>VS Code Example</h1>
     <p>Just testing out writing HTML / CSS with VS Code</p>
+    <div>
+        <ul>
+            <li>Item 1</li>
+            <li>Item Two</li>
+            <li>Item III</li>
+        </ul>
+    </div>
 </body>
 
 </html>
